src/test/deca/context/valid/without_class/convfloat.deca
// Description:
//    Teste les conversions implicites du type int vers float
//
// Result:
//    
//
// Historique:
//    cree le 08/01/2023
{
    int a = 0;
    float b = 3.0; 
    float c = a; //cast implicite de int vers float lors d'une initialisation
    float d;
    d=0;
    b = b + a; //cast implicite de int vers float dans une opération arithmétique

}