src/test/deca/context/invalid/without_class/invalid_cast.deca
// Description:
//    Error : cannot assign a float to an int
//
// Result:
//    INVALID_CAST: Type \(.\)\+ cannot be cast to type \(.\)\+
//    line 10
{
    int a = 3;
    float b = 4.0;
    int c = a * b;
}